# mcp-oauth-template

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_INTEGRATION.md  MIGRATION.md  Makefile  README.md  REFACTORING-SUMMARY.md  SECURITY.md  TEMPLATE_README.md  oauth-refactor-tasks.md  package-lock.json
docker/: docker-compose.yml
docker/mcp-server/: .dockerignore  Cargo.toml  Dockerfile
docker/mcp-server/src/: main.rs
scripts/: check-recent-logs.sh  deploy.sh  destroy.sh  setup-local.sh  setup-prod.sh  tail-logs.sh
terraform/: custom-domain.tf  dns.tf  kv-namespaces.tf  locals.tf  outputs.tf  providers.tf  secrets.tf  tunnel.tf  variables.tf  worker.tf
worker/: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml  wrangler.toml.example
worker/scripts/: exchange-token.sh  test-oauth.sh
worker/src/: approval-handler.ts  audit.ts  claude-integration.ts  client-init.ts  config-validator.ts  error-utils.ts  github-handler.ts  index.ts  logger.ts  mcp-auth-handler.ts  mcp-proxy.ts  metrics.ts  oauth-extensions.ts  oauth-utils.ts  rate-limiter.ts  registration.ts  root-handler.ts  token-endpoints.ts  token-utils.ts  types.ts
worker/src/__tests__/: oauth.test.ts
worker/src/identity/: github.ts  provider.ts
worker/src/mcp/: auth.ts  proxy.ts
worker/src/oauth/: pkce.ts  server.ts  tokens.ts
worker/src/oauth/endpoints/: authorize.ts  introspect.ts  revoke.ts  token.ts
worker/src/registration/: dynamic.ts  validation.ts
worker/src/security/: middleware.ts  utils.ts
(+2 files in other folders)
